--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Large screen  */
 @media (max-width: 1400px) {
   html {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 
@@ -27,25 +27,25 @@ body {
   background-color: var(--background-color);
   color: var(--text-color);
   margin: 0;
+  padding: 0;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .title {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .main {
-  --textbox-height: 10vmin;
-  --textbox-width: 80vmin;
+  --textbox-height: 25vh;
+  --textbox-width: 50vw;
 
-  margin: 2em;
+  margin-top: 1em;
   padding: 1em;
-  font-size: 1rem;
   background-color: var(--body-color);
   border-radius: 1.5em;
 }
@@ -90,7 +90,7 @@ body {
   resize: none;
   padding: 0.5em;
   margin-top: 0.5em;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
 }
 
 #original-text:focus {
@@ -110,7 +110,7 @@ body {
 
 button,
 .input-img-container {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   background-color: var(--background-color);
   color: var(--text-color);
   width: fit-content;
